# omp

OpenMp/: CMakeLists.txt
OpenMp/1/: main.cpp
OpenMp/10/: main.cpp
OpenMp/11/: main.cpp
OpenMp/2/: main.cpp
OpenMp/3/: main.cpp
OpenMp/4/: main.cpp
OpenMp/5/: main.cpp
OpenMp/6/: main.cpp
OpenMp/7/: main.cpp
OpenMp/8/: main.cpp
OpenMp/9/: main.cpp
